Vpc.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: VPC creation fot intellipaat assignment

Resources:
  MyVPC:
    Type: AWS::EC2::VPC
    Properties:
        CidrBlock: 10.0.0.0/16
        EnableDnsSupport: 'true'
        EnableDnsHostnames: 'true'
        Tags:
            - Key: Stack
              Value: Production

  PublicSubnet1:

    Type: AWS::EC2::Subnet
    Properties:
      VpcId: 
        Ref: MyVPC
      CidrBlock: 10.0.1.0/24
      AvailabilityZone: "us-east-1a"
      MapPublicIpOnLaunch: 'true'
      Tags:
          - Key: Name
            Value: PublicSubnet1


  PublicSubnet2:

    Type: AWS::EC2::Subnet
    Properties:
      VpcId: 
        Ref: MyVPC
      CidrBlock: 10.0.2.0/24
      AvailabilityZone: "us-east-1b"
      MapPublicIpOnLaunch: 'true'
      Tags:
          - Key: Name
            Value: PublicSubnet2

  PrivateSubnet1:

    Type: AWS::EC2::Subnet
    Properties:
      VpcId: 
        Ref: MyVPC
      CidrBlock: 10.0.3.0/24
      AvailabilityZone: "us-east-1a"
      MapPublicIpOnLaunch: 'false'
      Tags:
          - Key: Name
            Value: PrivateSubnet1

  PrivateSubnet2:

    Type: AWS::EC2::Subnet
    Properties:
      VpcId: 
        Ref: MyVPC
      CidrBlock: 10.0.4.0/24
      AvailabilityZone: "us-east-1b"
      MapPublicIpOnLaunch: 'false'
      Tags:
          - Key: Name
            Value: PrivateSubnet2


  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
          - Key: stack
            Value: MyIGW

  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: MyVPC
      InternetGatewayId:
        Ref: InternetGateway

  RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:  
        Ref: MyVPC
      Tags:
          - Key: stack
            Value: MyRT

  myCarrierRoute:
      Type: AWS::EC2::Route
      Properties:
        RouteTableId:
          Ref: RouteTable
        DestinationCidrBlock: 0.0.0.0/0
        GatewayId:
          Ref: InternetGateway

  PublicSubnet1RT:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: 
        Ref: PublicSubnet1
      RouteTableId: 
        Ref: RouteTable


  PublicSubnet2RT:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: 
        Ref: PublicSubnet2
      RouteTableId: 
        Ref: RouteTable

  NatEIP:
    Type: AWS::EC2::EIP
    DependsOn: AttachGateway
    Properties:
      Domain: vpc 

  NatGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatEIP.AllocationId
      SubnetId: 
        Ref: PublicSubnet1
      Tags:
        - Key: Name
          Value: MyNATGateway

  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: 
        Ref: MyVPC
      Tags:
        - Key: Name
          Value: PrivateRouteTable

  PrivateRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: 
        Ref: PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: 
        Ref: NatGateway

  PrivateSubnet1RT:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: 
        Ref: PrivateSubnet1
      RouteTableId: 
        Ref: PrivateRouteTable


  PrivateSubnet2RT:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: 
        Ref: PrivateSubnet2
      RouteTableId: 
        Ref: PrivateRouteTable
